# gemex

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: results.csv  results_confident.csv
examples/: 01_tabular_heart_diabetes.py  02_comparative_study.py  03_timeseries_ecg.py  04_ablation_study.py  05_statistical_comparison.py  06_pneumoniamnist.py  07_pathmnist.py  08_dermamnist.py  09_organamnist.py  10_bloodmnist.py  11_alternative_plots_tabular.py  12_triplet_hypergraph.py  13_image_trio.py  14_all_plots_showcase.py
gemex/: __init__.py
gemex/core/: __init__.py  config.py  explainer.py  result.py
gemex/data/: __init__.py  adapter.py
gemex/explain/: __init__.py  fas_btd.py
gemex/geometry/: __init__.py  geodesic.py  gsf.py
gemex/interaction/: __init__.py  pti_rst.py
gemex/manifold/: __init__.py  fim.py
gemex/viz/: __init__.py  dispatcher.py  plots.py
tests/: test_gemex.py
